tdf#100423 Template Manager: ctrl + A and del should work correctly

Change-Id: Ibe0326827e6dacb670bb948ca4f6e9797ab7edeb