sfx2/source/control/templateabstractview.cxx
@@ -235,7 +235,10 @@ void TemplateAbstractView::KeyInput( const KeyEvent& rKEvt )
         if ( aQueryDlg->Execute() != RET_YES )
             return;
 
-        for (ThumbnailViewItem* pItem : mFilteredItemList)
+        //copy to avoid changing filtered item list during deletion
+        ThumbnailValueItemList mFilteredItemListCopy = mFilteredItemList;
+
+        for (ThumbnailViewItem* pItem : mFilteredItemListCopy)
         {
             if (pItem->isSelected())
             {
